--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -87,46 +87,42 @@
     }
 
     /* -------- HOME PAGE -------- */
-    
-    .spotlights {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 1rem;
+    .hero {
         width: 100%;
-    }
-    .spotlights section:hover {
-        transform: translateY(-5px);
-        transition: 0.3s ease;
-    }
-    .infoDiv img{
-        width: 75px;
-        height: 75px;
-        object-fit: contain;
-    }
-    #home-main-container {
+        height: 60vh;
         padding: 0;
     }
-    #home-container {
-        padding: 1rem 5rem;
+    .hero img {
+        /* width: 1920px; */
+        width: 100%;
+        height: 100%;
+        max-width: 1350px;
+        /* height: 60vh; */
+        object-fit: cover;
+        border-top: 1px solid var(--background-color);
     }
-    #weather-section {
-        display: grid;
-        grid-template-columns: 2fr 1fr 1fr;
-        gap: 1rem;
+    .hero img:hover {
+        border-top: 1px solid var(--background-color);
     }
-    #events, 
-    #weather-forecast, 
-    #current-weather {
-        height: auto;
+    .cta-button {
+        background-color: var(--background-color-contrast);
+        color: var(--primary-color-contrast);
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+        padding: 1rem 1rem;
+        font-size: 1.2rem;
+        font-weight: 700;
+        /* bottom: 20px; */
+        bottom: 24%;
+        left: 15%;
+        width: 10rem;
+        text-align: center;
     }
-
-    #events:hover, 
-    #weather-forecast:hover, 
-    #current-weather:hover {
-        transform: translateY(-5px);
-        transition: 0.3s ease;
+    .cta-button:hover {
+        transform: scale(1.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        box-shadow: 0 0 50px rgba(255, 255, 255, 0.5);
     }
+    
 
     #events {
         width: 100%;
