--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -86,6 +86,48 @@
         flex: 1;
     }
 
+    /* -------- HOME PAGE -------- */
+    .hero {
+        width: 100%;
+        height: 60vh;
+        max-width: 100%;
+        max-height: 100%;
+        padding: 0;
+    }
+
+    .hero img {
+        /* width: 1920px; */
+        width: 100%;
+        height: auto;
+        max-width: 1350px;
+        /* height: 60vh; */
+        object-fit: cover;
+        border-top: 1px solid var(--background-color);
+    }
+
+    .hero img:hover {
+        border-top: 1px solid var(--background-color);
+    }
+
+    .cta-button {
+        background-color: var(--background-color-contrast);
+        color: var(--primary-color-contrast);
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+        padding: 1rem 1rem;
+        font-size: 1.2rem;
+        font-weight: 700;
+        /* bottom: 20px; */
+        bottom: 24%;
+        left: 15%;
+        bottom: 24%;
+        width: 10rem;
+        text-align: center;
+    }
     
+    .cta-button:hover {
+        transform: scale(1.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        box-shadow: 0 0 50px rgba(255, 255, 255, 0.5);
+    }
     
 }
