--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -123,11 +123,29 @@
         width: 10rem;
         text-align: center;
     }
-    
+
     .cta-button:hover {
         transform: scale(1.1);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0 0 50px rgba(255, 255, 255, 0.5);
     }
     
+    .spotlights {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 1rem;
+        width: 100%;
+    }
+
+    .spotlights section:hover {
+        transform: translateY(-5px);
+        transition: 0.3s ease;
+    }
+
+    .infoDiv img{
+        width: 75px;
+        height: 75px;
+        object-fit: contain;
+    }
 }
