--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -157,5 +157,33 @@
         padding: 1rem 5rem;
     }
 
-    
+    /* remove the #weather-section */
+
+    #events, 
+    #weather-forecast, 
+    #current-weather {
+        height: auto;
+    }
+
+    #events:hover, 
+    #weather-forecast:hover, 
+    #current-weather:hover {
+        transform: translateY(-5px);
+        transition: 0.3s ease;
+    }
+
+    #events {
+        width: 100%;
+    }
+
+    #events h2, 
+    #weather-forecast h2, 
+    #current-weather h2 {
+        padding: 1rem;
+    }
+
+    #current-weather-details p {
+        font-size: .9rem;
+    }
+    /* -------- END HOME PAGE -------- */
 }
