--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -151,10 +151,10 @@
     }
 
     #weather-section {
-        display: grid;
-        grid-template-columns: 2fr 1fr 1fr;
+        display: flex;
         gap: 1rem;
     }
+
     #events, 
     #weather-forecast, 
     #current-weather {
