--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -151,7 +151,8 @@
     }
 
     #weather-section {
-        display: flex;
+        display: grid;
+        grid-template-columns: 3fr 2fr 2fr;
         gap: 1rem;
     }
 
