--- a/bizlyhub/styles/large.css
+++ b/bizlyhub/styles/large.css
@@ -21,4 +21,51 @@
         grid-column: 3 / 4;
     }
     /* End of code for header, menu, navigation */
+
+    /* Hero Section Styles (Large Screens) */
+    .hero {
+        display: flex;
+        align-items: center;
+        padding: 50px 0;
+        min-height: 300px; 
+        background-color: var(--primary-color);
+        color: var(--background-color);
+    }
+
+    .hero-content {
+        flex: 1;
+        padding: 0 50px;
+        text-align: left;
+    }
+
+    .hero-content h1 {
+        font-size: 3.5rem;
+    }
+
+    .hero-content p {
+        font-size: 1rem;
+    }
+
+    .hero-content button {
+        border: none;
+        background-color: var(--background-color);
+        color: var(--primary-color);
+        font-size: 1.5rem;
+        padding: 1rem;
+        cursor: pointer;
+        box-shadow: 0 0 20px rgba(255, 255, 255, 1);
+    }
+
+    .hero-image {
+        flex: 1;
+    }
+
+    .hero-image img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        object-fit: cover;
+        object-position: center;
+    }
+    /* End hero section */
 }
