--- a/bizlyhub/styles/large.css
+++ b/bizlyhub/styles/large.css
@@ -68,4 +68,42 @@
         object-position: center;
     }
     /* End hero section */
+
+    /* Animation for the hero section */
+    .hero-content h1 {
+        animation: fadeInUp 0.5s ease forwards;
+    }
+    
+    .hero-content p {
+        animation: fadeInUp 1.5s ease forwards;
+    }
+    
+    .hero-content .cta-button {
+        animation: fadeInUp 2.5s ease forwards;
+    }
+    
+    .hero-image img {
+        animation: fadeIn 1s ease forwards; /* Fades in */
+    }
+    
+    @keyframes fadeInUp {
+        from {
+            opacity: 0;
+            transform: translateY(50px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+    
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+    /* end animation for hero section */
 }
