--- a/bizlyhub/styles/large.css
+++ b/bizlyhub/styles/large.css
@@ -106,4 +106,37 @@
         }
     }
     /* end animation for hero section */
+
+    /* Services section */
+    .services {
+        display: flex;
+        align-items: center;
+        padding: 80px 50px; /* Adjust padding for larger screens */
+        text-align: left; /* Align text to the left */
+    }
+
+    .services-content {
+        flex: 1;
+        padding-right: 50px; /* Space between content and image */
+        margin-bottom: 0; /* Remove margin for larger screens */
+    }
+
+    .services-image {
+        flex: 1;
+    }
+
+    .services-image img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .services h2 {
+        font-size: 2.5rem; /* Adjust as needed */
+        margin-bottom: 20px;
+    }
+
+    .services li {
+        font-size: 1.2rem; /* Adjust as needed */
+    }
+    /* End of services section */
 }
