--- a/bizlyhub/styles/large.css
+++ b/bizlyhub/styles/large.css
@@ -104,6 +104,11 @@
         to { opacity: 1; transform: translateY(0); }
     }
 
+    @keyframes fadeInRight {
+        from { opacity: 0; transform: translateX(60px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+
     @keyframes fadeIn {
         from { opacity: 0; }
         to { opacity: 1; }
@@ -141,7 +146,7 @@
 
     /* Services Section - Service Page */
     .services-hero h1,
-    .services-hero p {
+    .services-hero p { 
         opacity: 0;
         transform: translateY(100px);
         transition: opacity 0.5s ease, transform 2s ease;
@@ -174,6 +179,9 @@
         transform: translateY(0);
     }
 
+    .contact-hero h1 { animation: fadeInUp 1s ease forwards; }
+    .contact-hero p { animation: fadeInUp 2s ease forwards; }
+    .contact-form h2 { animation: fadeInRight 1s ease-in forwards}
     /* end animation for sections */
 
     /* Services section */
@@ -296,16 +304,16 @@
     /* End footer */
 
     /***** SERVICES PAGE FROM HERE *****/
-    .services-hero {
+    .services-hero, .contact-hero {
         padding: 80px 0;
     }
 
-    .services-hero h1 {
+    .services-hero h1, .contact-hero h1 {
         font-size: 2.5rem;
         margin-bottom: 20px;
     }
 
-    .services-hero p {
+    .services-hero p, .contact-hero p {
         font-size: 1.2rem;
     }
 
@@ -341,4 +349,10 @@
         padding: 15px 30px;
         font-size: 1.2rem;
     }
+
+    /* CONTACT US */
+    .container-contact-us {
+        padding: 2rem 20rem;
+    }
+    /* END CONTACT US */
 }
