update - remove unused css

--- a/bizlyhub/styles/large.css
+++ b/bizlyhub/styles/large.css
@@ -208,12 +208,12 @@
     }
 
     .services h2 {
-        font-size: 2.5rem; /* Adjust as needed */
+        font-size: 2.5rem; 
         margin-bottom: 20px;
     }
 
     .services li {
-        font-size: 1.2rem; /* Adjust as needed */
+        font-size: 1.2rem; 
     }
     /* End of services section */
 
