--- a/bizlyhub/styles/small.css
+++ b/bizlyhub/styles/small.css
@@ -119,9 +119,10 @@ ul.menu-links li a {
 
 .hero p {
     font-size: 1rem; /* Adjust font size for smaller screens */
+    padding-bottom: 1rem;
 }
 
-.hero-content button {
+.hero-content a {
     margin-top: 1rem;
     border: none;
     background-color: var(--background-color);
@@ -130,6 +131,7 @@ ul.menu-links li a {
     padding: 1rem;
     cursor: pointer;
     box-shadow: 0 0 20px rgba(255, 255, 255, 1);
+    text-decoration: none;
 }
 /* End hero section */
 
