--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -561,7 +561,8 @@ p {
         "card8"; 
     grid-template-columns: repeat(1, 1fr);
     gap: .5rem; /* Sets the gap between grid items to 1rem */
-    padding: 0 !important;
+    padding: 1rem !important;
+    height: 230rem;
 }
 
 .cards:nth-child(1) { grid-area: card1; }
